Tue Feb 28 01:07:37 1995  John Gilmore  (gnu at toad.com)

	* *.c:  Avoid <krb5/...> includes.

Fri Feb  3 08:24:18 1995  Theodore Y. Ts'o  (tytso@dcl)

	* gmt_mktime.c (gmt_mktime): Don't double count the leap day in a
		leap year.

Sun Jan 22 18:23:37 1995  John Gilmore  (gnu@cygnus.com)

	* get_krbhst.c (krb5_get_krbhst):  Declare realm argument const,
	to match prototype.

Wed Jan 18 11:08:59 1995    <tytso@rsx-11.mit.edu>

	* sendto_kdc.c (krb5_sendto_kdc): Fix use of connected sockets;
		previously krb5_sendto_kdc only used one socket per
		address family.  This doesn't work; it now uses one
		socket per address. (krb5-bugs #938)

Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

	* Actually move the file init_ctx.c to init_os_ctx.c in the CVS
		repository and also rename the routine  krb5_free_os_context()
		to krb5_os_free_context().

Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

    * Added krb5_context to all krb5_routines

	* Moved init_ctx.c to init_os_ctx.c because a library cannot
		have more than on file with the same name. See krb/init_ctx.c

Mon Dec 19 15:20:35 1994  Theodore Y. Ts'o  (tytso@dcl)

	* init_ctx.c: New file.  Initializes and frees the krb5_os_context
	  structure. 

	* realm_dom.c (krb5_get_realm_domain): Fixed minor bug where the
		length of the returned domain was calculated incorrectly.

Mon Oct 31 17:04:08 1994  Theodore Y. Ts'o  (tytso@dcl)

	* lock_file.c: Back out POSIX_FILE_LOCKS change.  (Should be
		depending on autoconf.h to supply this #define if
		necessary.) 

Thu Oct 13 17:24:31 1994  Theodore Y. Ts'o  (tytso@maytag)

	* configure.in: Add ISODE_DEFS

Fri Oct  7 13:23:18 1994  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in: Add test for unistd.h

	* lock_file.c: Use POSIX_FILE_LOCKS if _POSIX_VERSION is defined
		in unistd.h

Thu Sep 22 20:46:08 1994  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in: Put in correct dependency order of configure.in
		lines.
